...
/// only for russian right now....
/// maybe I will parse more translations data later and expand the index
class SearchLocalizedNameIndex {
  static const Map<String, dynamic> tesoIndex = {'effects': {}, 'ingredients': {}};
  static const Map<String, Map<String, String>> skyrimIndex = {
    'effects': {
      "Исцеление болезней": "Cure Disease",
      "Урон здоровью": "Damage Health",
      "Урон магии": "Damage Magicka",
      "Повреждение регенерации магии": "Damage Magicka Regen",
      "Урон запасу сил": "Damage Stamina",
      "Повреждение регенерации запаса сил": "Damage Stamina Regen",
      "Страх": "Fear",
...
      "Регенерация запаса сил": "Regenerate Stamina",
      "Сопротивление огню": "Resist Fire",
      "Сопротивление холоду": "Resist Frost",
      "Сопротивление магии": "Resist Magic",
      "Сопротивление ядам": "Resist Poison",
      "Сопротивление электричеству": "Resist Shock",
      "Восстановление здоровья": "Restore Health",
      "Восстановление магии": "Restore Magicka",
      "Восстановление запаса сил": "Restore Stamina",
      "Замедление": "Slow",
      "Уязвимость к огню": "Weakness to Fire",
      "Уязвимость к холоду": "Weakness to Frost",
      "Уязвимость к магии": "Weakness to Magic",
...
      "Светящийся гриб": "Glowing Mushroom",
      "Травяной стручок": "Grass Pod",
      "Коготь ворожеи": "Hagraven Claw",
      "Перья ворожеи": "Hagraven Feathers",
      "Бородатый мох": "Hanging Moss",
      "Клюв ястреба": "Hawk Beak",
      "Перья ястреба": "Hawk Feathers",
      "Яйцо ястреба": "Hawk's Egg",
      "Хисткарп": "Histcarp",
      "Медовые соты": "Honeycomb",
      "Человечье мясо": "Human Flesh",
      "Человеческое сердце": "Human Heart",
      "Зубы ледяного привидения": "Ice Wraith Teeth",
...
      "Восстановление обаяния": "Restore Personality",
      "Восстановление скорости": "Restore Speed",
      "Восстановление силы": "Restore Strength",
      "Восстановление силы воли": "Restore Willpower",
      "Щит": "Shield",
      "Урон электричеством": "Shock Damage",
      "Электрический щит": "Shock Shield",
      "Безмолвие": "Silence",
      "Водное дыхание": "Water Breathing",
      "Хождение по воде": "Water Walking",
      "Уязвимость к огню": "Weakness to Fire"
    },
    'ingredients': {
...
      "Листья полыни": "Wormwood Leaves"
    }
  };
  static const Map<String, dynamic> morrowindIndex = {
    'effects': {
      "Обуза": "Burden",
      "Излечить моровую болезнь": "Cure Blight Disease",
      "Излечить обычную болезнь": "Cure Common Disease",
      "Излечить паралич": "Cure Paralyzation",
      "Противоядие": "Cure Poison",
      "Повреждение: Интеллект": "Damage Intelligence",
      "Заметить сущность": "Detect Animal",
      "Обнаружить чары": "Detect Enchantment",
...
